<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_theme_background"
    tools:context=".activities.StartActivity">

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/start_act_greeting"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/png_robot"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:hint="@string/ask_for_email"
        android:fontFamily="@font/inconsolata"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:id="@+id/email_field"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_greeting"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/tv_greeting"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting"
        app:layout_constraintVertical_bias="0.026"
        android:inputType="textEmailAddress"
        android:autofillHints="" />



    <EditText
        android:hint="@string/ask_password"
        android:fontFamily="@font/inconsolata"
        android:textSize="12sp"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:id="@+id/password_field_field"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/round_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:layout_constraintVertical_bias="0.039" />


    <ImageView
        android:id="@+id/png_robot"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:srcCompat="@drawable/friendly_robot_no_background" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/or"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_field_field"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/password_field_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field_field"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_or"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/tv_or"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inconsolata"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_field_field"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_field_field"
        app:layout_constraintTop_toBottomOf="@+id/email_field"
        app:layout_constraintVertical_bias="0.182" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_green_btn"
        android:fontFamily="@font/inconsolata"
        android:shadowColor="@color/transparent"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="@+id/password_field_field"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/password_field_field"
        app:layout_constraintTop_toBottomOf="@+id/password_field_field"
        app:layout_constraintVertical_bias="0.625" />

</androidx.constraintlayout.widget.ConstraintLayout>